# harness-benchmark

./: .dockerignore  .env.example  .gitignore  .gitmodules  README.md  benchmark.yaml  pyproject.toml
benchmark/: __init__.py  __main__.py  config.py  report.py  runner.py  store.py  task_loader.py
container/: __init__.py  analyze-proxy.js  assemble_prompt.sh  check_tamper.sh  extract_metrics.py  proxy.js  run_tests.sh
docker/: Dockerfile  entrypoint.sh
docs/: index.html  leaderboard.md
docs/assets/: leaderboard-data.json
docs/superpowers/plans/: 2026-07-08-harness-benchmark.md
docs/superpowers/specs/: 2026-07-08-harness-benchmark-design.md  2026-07-16-grok-build-adapter-design.md  2026-07-16-junie-cline-adapters-design.md
harnesses/_template/: adapter.sh  manifest.yaml
harnesses/autohand/: adapter.sh  manifest.yaml
harnesses/cline/: adapter.sh  manifest.yaml
harnesses/grok/: adapter.sh  manifest.yaml
harnesses/junie/: adapter.sh  manifest.yaml
harnesses/kilo/: adapter.sh  manifest.yaml
harnesses/kimi/: adapter.sh  manifest.yaml
harnesses/opencode/: adapter.sh  manifest.yaml
harnesses/pi/: adapter.sh  manifest.yaml
results/: store.db
scripts/: benchmark.sh  build-image.sh  report.sh  setup-polyglot.sh
tests/: conftest.py  test_config.py  test_extract_metrics.py  test_report.py  test_store.py  test_task_loader.py
tests/fixtures/: autohand-events.jsonl  cline-events.jsonl  grok-events.jsonl  junie-events.jsonl  kimi-events.jsonl  pi-events.jsonl
