[project]
name = "harness-benchmark"
version = "0.1.0"
description = "Benchmark coding agent harnesses with identical LLM"
requires-python = ">=3.12"
dependencies = [
    "inspect-ai>=0.3.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
harness-benchmark = "benchmark.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["benchmark", "container"]
